--- a/src/style.css
+++ b/src/style.css
@@ -157,6 +157,7 @@ button:focus {
 .logo {
   height: 1.4em !important;
   width: 2.5em !important;
+  
 }
 
 .navbar-nav .nav-link {
@@ -248,6 +249,7 @@ button:focus {
   background-size: cover !important;
   width: 100%;
   height: 100%;
+  top: -60px !important;
 }
 
 .home-header {
@@ -407,8 +409,10 @@ button:focus {
   padding-top: 10px !important;
   padding-bottom: 8px !important ;
 }
-.footer-copywright {
+.footer .footer-copywright {
   text-align: center !important;
+  margin: auto;
+  
 }
 
 .footer-body {
@@ -432,11 +436,7 @@ button:focus {
   margin-top: 0.5em !important;
   margin-bottom: 0.5em !important;
 }
-.footer-icons {
-  margin-top: 0.5em !important;
-  margin-bottom: 0.5em !important;
-  padding: 0 !important;
-}
+
 
 .blockquote-footer {
   color: #a588c0 !important;
@@ -544,7 +544,7 @@ button:focus {
 
 .about-section {
   position: relative !important;
-  padding-top: 150px !important;
+  padding-top: 120px !important;
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
   color: white !important;
@@ -740,4 +740,12 @@ button:focus {
 }
 .fork-btn-inner::after {
   display: none !important;
+}
+.tech-label {
+  text-align: center;
+  font-size: 0.2em;
+  color: #c770f0;
+  margin-top: 0.3em;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
 }
